# Student-Assistant

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/examples/: asr.py  captcha.html  childprocess.rs  ocr.py  tracing.rs
src-tauri/src/: app.rs  book.rs  config.rs  driver.rs  lib.rs  logger.rs  main.rs  notify.rs  utils.rs
src-tauri/src/book/: asr.rs  interact.rs  ocr.rs
src-tauri/src/utils/: config.rs
