[package]
name = "studentassistant"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "studentassistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"
lettre = "0.11.11"
thirtyfour = "0.35.0"
once_cell = "1.20.2"
chrono = "0.4.39"
winapi = { version = "0.3.9",features = ["winbase"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
strum = { version = "0.26.3", features = ["derive"] }
color-eyre = "0.6.3"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tauri-plugin-log = "2.2.0"
log = "0.4.22"
rusty-tesseract = "1.1.10"
pyo3 = { version = "0.23.3", features = ["extension-module", "auto-initialize"] }
pyo3-ffi = "0.23.3"
uuid = { version = "1.11.0", features = ["v4"] }
reqwest = "0.12.10"
